# RenderTM

./: .gitignore  CMakeLists.txt  README.md  blue_noise.h  controls.cpp  controls.h  input.cpp  input.h  keyboard.cpp  keyboard.h  main.cpp  render.cpp  render.h  terminal_render.cpp  terminal_render.h  vector.cpp  vector.h
src/: controls.cppm  input.cppm  keyboard.cppm  main.cpp  noise.cppm  prelude.hpp  render.cppm  terminal.cppm
src/render/: blue_noise.inc  camera.cppm  engine.cppm  framebuffer.cppm  lighting.cppm  math.cppm  noise.cppm  post.cppm  rasterizer.cppm  render.cppm  settings.cppm  terrain.cppm  world.cppm
tests/: test_controls.cpp  test_input.cpp  test_prelude.hpp  test_render.cpp  test_vector.cpp
